rounding changes in nsNativeThemeGTK::DrawWidgetBackground, rename aClipRect to aDirtyRect in nsITheme::DrawWidgetBackground. b=444837 r=roc